add ark endpoint

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,9 @@ ALIBABA_API_KEY=
 MOONSHOT_ENDPOINT=https://api.moonshot.cn/v1
 MOONSHOT_API_KEY=
 
+ARK_ENDPOINT="https://ark.cn-beijing.volces.com/api/v3"
+ARK_API_KEY=
+
 # Set to false to disable anonymized telemetry
 ANONYMIZED_TELEMETRY=true
 
